# pyMalleableProfileParser

./: .gitignore  .gitmodules  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  renovate.json  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql-analysis.yml
mpf/: __init__.py  constants.py  finder.py  utils.py
mpp/: __init__.py  constants.py  profile.py
mpp/blocks/: __init__.py  block.py  client.py  code_signer.py  dns_beacon.py  http.py  https_certificate.py  id.py  metadata.py  output.py
mpp/options/: __init__.py  option.py
mpp/parser/: __init__.py  exceptions.py  parser.py
mpp/statements/: __init__.py  statement.py
tests/: test.py  test_profile.py
tests/mpp/: test_profile.py
tests/mpp/options/: test_option.py
tests/mpp/statements/: test_statement.py
