[tool.poetry]
name = "pyMalleableProfileParser"
version = "0.4.0"
description = "Parses Cobalt Strike malleable profiles."
authors = ["Brett Fitzpatrick <brett.fitzpatrick@ironnetcybersecurity.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/brett-fitz/pyMalleableProfileParser"
repository = "https://github.com/brett-fitz/pyMalleableProfileParser"
keywords = ["cobalt strike", "malleable profile", "parser"]
classifiers = ["Development Status :: 4 - Beta"]
packages = [
    { include = "mpp" }
]

[tool.poetry.dependencies]
python = "^3.8"
regex = "^2023.8.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pylint = "^2.17.5"
ipykernel = "^6.25.1"
gitpython = "^3.1.34"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
